syntax = "proto3";

option csharp_namespace = "Microservice.MapManager.Protos";

package mapProto;

service MapService {
  rpc GetMapId (GetMapIdRequest) returns (GetMapIdReply);
  rpc GetMapCenter (GetMapCenterRequest) returns (GetMapCenterReply);
  rpc GetMapArea (GetMapAreaRequest) returns (GetMapAreaReply);
}

message GetMapIdRequest {
	int32 modelId = 1;
	string cadaster = 2;
	string categoryName = 3;
}
message GetMapIdReply {
    int32 mapId = 1;
}

message GetMapCenterRequest {
	int32 modelId = 1;
}
message GetMapCenterReply {
    double lat = 1;
	double lng = 2;
}

message GetMapAreaRequest {
	int32 modelId = 1;
}
message GetMapAreaReply {
    double area = 1;
}
